--- a/ingress/aws/cert-manager/cert.yaml
+++ b/ingress/aws/cert-manager/cert.yaml
@@ -9,5 +9,5 @@ spec:
     name: letsencrypt
     kind: ClusterIssuer
   dnsNames:
-    - 'example.com'
-  commonName: 'example.com'
+    - 'domain'
+  commonName: 'domain'
