--- a/ingress/aws/cert-manager/issuer.yaml
+++ b/ingress/aws/cert-manager/issuer.yaml
@@ -6,19 +6,19 @@ metadata:
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
-    email: example@example.com
+    email: 
     privateKeySecretRef:
-      name: letsencrypt
+      name: letsencrypt-secret
     solvers:
       - selector:
           dnsZones:
-          - "example.com"
+          - "myhost"
         dns01:
           route53:
             region: us-east-1
-            hostedZoneID: XXX
-            accessKeyID: XXX
+            hostedZoneID: 
+            accessKeyID: 
             secretAccessKeySecretRef:
-              name: XXX
-              key: XXX
+              name: aws-route53-creds
+              key: password.txt
 
