--- a/ingress/aws/alb/whoami-ingress.yaml
+++ b/ingress/aws/alb/whoami-ingress.yaml
@@ -1,16 +1,12 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: "whoami"
+  name: whoami
   labels:
     app: whoami
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
-    
-    
-
-
 spec:
   ingressClassName: alb
   rules:
